Work on Network: datalinkk

--- a/docs/Network/notes/3 数据链路层.md
+++ b/docs/Network/notes/3 数据链路层.md
@@ -45,7 +45,6 @@ tags:
 - 使用CSMA/CD协议
 
 ## 协议
-
 ### PPP协议(Point-to-Point protocol)
 - 用户计算机与ISP进行通信时所使用的数据链路层协议
 - 支持多种网络层协议，多种类型链路
@@ -60,15 +59,56 @@ tags:
 - __多点接入__: 表示许多计算机以多点接入的方式连接在一根总线上
 - __载波监听__: 在发送数据前，需要先检测总线上是否有其他计算机在发送数据，如果有暂时不发送，以免发生碰撞
 - __碰撞检测__: 检测信道上的信号电压摆动，每一个正在发送数据的站，一旦发现总线上出现了碰撞，立刻就要停止发送
-- __争用期__: 若端到端的传播时延为`t`，则最先发送数据的站最多经过`2t`时间，就可以判断是否发生了碰撞
-- __最短有效帧__: 
-    + `64byte`(通常争用期为`51.2us`，对于`10Mb/s`以太网，争用期内可发送`64byte`)  
-    + 若前64字节未发生冲突，则后续数据就不会发生冲突
-- __二进制指数类型退避算法__: 
-    + 发生碰撞的站在停止发送数据后，要推迟一个随机时间再次发送数据
-    + 基本退避时间=争用期，`[0,1,...,(2^k-1)]`中随机选择一个数`r`，取`r`倍的基本退避时间
 
-## 以太网
-### MAC层(Media Access Control)
+__争用期__: 若端到端的传播时延为`t`，则最先发送数据的站最多经过`2t`时间，就可以判断是否发生了碰撞
+
+__最短有效帧__: 通常争用期为`51.2us`，对于`10Mb/s`以太网，争用期内可发送`64byte`数据，也就意味着，若前64字节未发生冲突，则后续数据就不会发生冲突
+
+__二进制指数类型退避算法__: 发生碰撞的站在停止发送数据后，要推迟一个随机时间再次发送数据，通常基本退避时间=争用期，`[0,1,...,(2^k-1)]`中随机选择一个数`r`，取`r`倍的基本退避时间
+
+## 局域网
+### 局域网特点
+- 局域网拓扑结构: 星形网，总线网，环形网，树形网
+- 网络为一个单位所拥有，且地理范围和站点有限
+- 具有广播功能，从一个站点可以方便地访问全网
+
+### MAC地址(Media Access Control)
 - 局域网中，硬件地址又称为物理地址或MAC地址
 - MAC地址由48位组成，前24位(高位24位)指定厂家，后24位由厂家自行指派，必须保证没有重复地址
+
+## 以太网
+以太网是一种星形拓扑的局域网，早期使用集线器进行连接，集线器类似一个多接口的转发器，工作在物理层
+
+目前使用交换机代替了集线器，交换机是链路层设备，不会发生碰撞，能根据MAC地址进行存储转发
+
+### 以太网与数据链路层
+早先，802委员会将局域网的数据链路层拆成两个子层
+- 逻辑链路控制子层(LLC)
+- 媒体接入控制子层(MAC)
+
+后来由于TCP/IP体系经常使用的局域网不是802.3标准中的几种局域网，LLC层的作用已经不大了，很多厂商生产的适配器上就仅装有MAC协议
+
+__以太网的帧格式__(MAC帧)
+![以太网帧格式](/img/以太网帧格式.png)
+
+### 适配器检查MAC地址
+适配器从网络上收到每一个MAC帧，首先用硬件检查MAC帧中的MAC地址
+- 如果是发往本站的帧则收下，然后进行后续处理
+- 否则将此帧丢弃，不进行任何其他操作
+
+发往本站的帧包括以下3种
+- 单播帧(unicast): 一对一
+- 广播帧(broadcast): 一对全体
+- 多播帧(multicast): 一对多
+
+## 局域网拓展
+### 网桥
+网桥工作在数据链路层，根据MAC帧的目的地址对收到的帧进行**转发**。同时网桥具有**过滤帧**的功能，在收到一个帧时，并不是向所有的接口进行转发，而是先检查帧的MAC地址，再确定将该帧转发至哪个接口
+
+**自学习能力**: 网桥每收到一个新的帧，则记录下其源地址和进入网桥的接口于转发表，随后广播该帧。对于已有记录的地址，在转发帧时，则根据转发表进行转发
+
+网桥的**优点**是，过滤了通信量，扩大了物理范围；**缺点**是存储转发增加了时延
+
+目前使用最多的是**透明网桥**，「透明」是指网桥对局域网上的站点相当于不存在，网桥是一种**即插即用**的设备
+
+### 交换机
