JavaSE: complete wrapper class

--- a/docs/Network/notes/1 计算机网络概述.md
+++ b/docs/Network/notes/1 计算机网络概述.md
@@ -28,11 +28,11 @@ __共享性__: 信息共享，软硬件共享
 报文和分组有点类似: 单循环和流水线关系(single cycle and pipeline)
 
 ## 计算机网络类别
-### 作用范围:
+### 作用范围
 - 广域网(WAN): 应用了广域网技术；花钱买服务，花钱买带宽
 - 局域网(LAN): 应用了局域网技术；自己购买设备，自己维护，带宽固定，距离100米以内
 
-### 使用者:
+### 使用者
 - 公用网(Public Network)
 - 专用网(Private Network)
 
