--- a/docs/Network/notes/0 总结.md
+++ b/docs/Network/notes/0 总结.md
@@ -5,9 +5,11 @@ categories:
     - [计算机网络]
 tags:
 ---
-## 物理层
-**设备**
-- 集线器
+## 应用层
+
+## 传输层
+
+## 网络层
 
 ## 数据链路层
 **设备**
@@ -17,3 +19,7 @@ tags:
 **协议**
 - PPP协议
 - CSMA/CD协议
+
+## 物理层
+**设备**
+- 集线器
