--- a/docs/Network/notes/3 数据链路层.md
+++ b/docs/Network/notes/3 数据链路层.md
@@ -11,7 +11,7 @@ tags:
 - 一条链路只是一条通路的一个组成部分
 
 ### 数据链路
-- 除了物理线路外，还必须有通信协议来控制这些数据的传 
+- 除了物理线路外，还必须有通信协议来控制这些数据的传输
 - 实现了这些协议的硬件和软件加到链路上，就构成了数据链路
 - 一般的适配器都包含了数据链路层和物理层这两层的功能
 - 目前最常用的是使用适配器(网卡)来实现这些协议的硬件和软件
