--- a/docs/Network/notes/0 计算机网络概述.md
+++ b/docs/Network/notes/0 计算机网络概述.md
@@ -37,7 +37,7 @@ tags:
     + 视频传输，压缩视频以节省带宽，开发人员考虑
 - 会话层（Session）服务和客户端建立的会话
     + netstat -nb
-- 传输层（Transport）：可靠传输，不可靠传输，流量控制
+- 运输层（Transport）：可靠传输，不可靠传输，流量控制
     + 可靠传输建立会话，不可靠传输不建立
 - 网络层（Network）：选择最佳路径，IP地址编址
 - 数据链路层（Data Link）：数据如何封装，添加物理层地址（MAC）
@@ -45,13 +45,13 @@ tags:
 
 ### TCP/IP四层模型（因特网事实上的国际标准）
 - 应用层（Application）->（1-3）
-- 传输层（Transport）->（4）
+- 运输层（Transport）->（4）
 - 网络层（Internet）->（5）
 - 网络接口层（Network Access）->（6-7）
 
 ### 五层模型
 - 应用层（Application）
-- 传输层（Transport）
+- 运输层（Transport）
 - 网络层（Internet）
 - 数据链路层（Data Link）
 - 物理层（Physical）
