--- a/docs/Network/notes/1 应用层2.md
+++ b/docs/Network/notes/1 应用层2.md
@@ -12,7 +12,7 @@ Web 的应用层协议是**超文本传输协议**（HyperText Transfer Protocol
 HTTP 由两个程序实现，一个客户程序，一个服务器程序。客户程序与服务器程序运行在不同的端系统中，通过 HTTP 报文进行会话。 HTTP 定义了这些报文的结构以及客户服务器进行报文交换的方式
 
 ---
-**基本工作方式**  
+**工作方式**  
 - HTTP 使用 **TCP** 作为支撑运输协议，TCP 为 HTTP 提供**可靠数据传输服务** 
 - 客户首先发起一个与服务器的 TCP 连接
 - 一旦连接建立，客户通过它的 socket 接口发送 HTTP **请求报文**并从 socket 接口中接收 HTTP **响应报文**
