--- a/docs/Network/notes/0 计算机网络概述.md
+++ b/docs/Network/notes/0 计算机网络概述.md
@@ -50,11 +50,25 @@ tags:
 - 网络接口层（Network Access）->（6-7）
 
 ### 五层模型
-- 应用层（Application）
-- 运输层（Transport）
-- 网络层（Internet）
-- 数据链路层（Data Link）
-- 物理层（Physical）
+**应用层（Application）**：报文  
+- 为特定应用程序提供数据传输服务
+
+**运输层（Transport）**：报文段/用户数据报  
+- 提供进程间的通讯服务
+- 进程间的流量控制，拥塞控制，错误检测
+
+**网络层（Internet）**：数据报  
+- 提供主机间的通讯服务
+- 连接，路由选择，拥塞控制
+
+**数据链路层（Data Link）**：帧  
+- 定义了数据传输的格式
+- 错误检测和纠正，物理层上的拥塞控制
+
+**物理层（Physical）**：比特  
+- 定义物理设备标准
+- 传输比特流
+
 
 ## 网络性能指标
 - 速率 = 在数据信道上传输数据位数的速率
